# quantum-ultimate-tic-tac-toe

./: README.md  app.py  backup  functions.py  game.py  game_rotate.py  game_rotate_big.py  ibm.py  pyproject.toml  simulate.py  work_in_progress
src/: main.py  main_cli.py  main_gui.py
src/Images/: .gitignore
src/backend/: enums.py  game.py  math.py  parser.py  partial_circuits.py  quantum_tic_tac_toe.py
src/cli/: input.py  qttt_cli.py
src/gui/: app.py  board.py  partial_circuits.py
src/gui/images/: .gitignore
src/gui/widgets/: angle_selection.py  board.py  move_selection.py  number_selection.py  partial_circuit_selection.py
