[project]
name = "quantum-tic-tac-toe"
authors = [
    { name = "Rūta Giedrytė" },
    { name = "Leander Bindt" },
    { name = "Nils Mikk" },
    { name = "Fran Ogurlić" },
    { name = "Hidde van Luenen" },
]
description = "Quantum Tic-Tac-Toe"
readme = "README.md"
version = "0.0.1"
dependencies = ["qiskit", "qiskit-aer", "qiskit-ibm-runtime"]

[project.gui-scripts]
qttt = "main_gui:main"

[project.scripts]
qttt-cli = "main_cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
